k8s-deploy-config/k8s_deploy.yml
# Specifies what version of K8s you want to use
apiVersion: v1
# A service is used to expose your Deployment to the external access
kind: Service
metadata:
  name: intact-portal-search-interactions-service
spec:
  ports:
    - port: 31253
      protocol: TCP
      # The port which will be externally exposed. Must be in the range [30000, 32767].
      nodePort: 31247
      # The port on your Deployment which it will expose
      targetPort: 8082
  selector:
    # Selects the disease-portal-client Deployment to attach the Service to
    app: intact-portal-search-interactions
    # Tell K8s this wants to expose an external port
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intact-portal-search-interactions-deployment
spec:
  selector:
    matchLabels:
      app: intact-portal-search-interactions
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: intact-portal-search-interactions
    spec:
      terminationGracePeriodSeconds: 10
      restartPolicy: Always
      containers:
        - name: intact-portal-search-interactions
          # Pull the latest image which contains intact-portal-search-interactions webservice and the built assets from EBI's dockerhub
          image: <IMAGE_TAG>
          imagePullPolicy: IfNotPresent
          ports:
            # We are using interaction webservice config which serves on port 8082
            - containerPort: 8082
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 20
      imagePullSecrets:
        # Provided by GitLab, this allows K8s to connect to dockerhub.ebi.ac.uk
        - name: gitlab-registry
