k8s-deploy-config/k8s_deploy_ingress_new.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intact-portal-search-interactions-ingress
spec:
  rules:
    - http:
        paths:
          - path: /intact/ws/interaction
            pathType: Prefix
            backend:
              service:
                name: intact-portal-search-interactions-service
                port:
                  number: 31253
