k8s-deploy-config/k8s_ingress_dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intact-portal-search-interactions-ingress-1
spec:
  rules:
  - http:
      paths:
      - path: /intact/ws/interaction
        pathType: Prefix
        backend:
          service:
            name: intact-portal-search-interactions-service
            port:
              number: 31242
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intact-portal-search-interactions-ingress-2
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /intact/ws/interaction/$2
spec:
  rules:
  - http:
      paths:
      - path: /intact/test/ws/interaction(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: intact-portal-search-interactions-service
            port:
              number: 31242
